<resources>
    <string name="app_name">LearningApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="default_web_client_id">597446628586-23bam2a6i2ad5voi8sotqulja5ft46in.apps.googleusercontent.com</string>
    <string name="apptitude_test_icon">Apptitude Test Icon</string>
    <string name="apptitude_test">Apptitude Test</string>
    <string name="click_here_to_unlock_your_potential">Click here to unlock your potential!</string>
    <string name="unlock_your_potential_by_taking_our_apptitude_test">Unlock your potential by taking our apptitude test</string>
    <string name="take_test">Take test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="aptitude_test_results">Aptitude Test Results</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="about">About</string>
    <string name="bio">Bio</string>
    <string name="user_information">User Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="mobile">Mobile</string>
    <string name="dob">Date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="userAge">User Age</string>
    <string name="userEmail">b@gmail.com</string>
    <string name="phone">userPhoneNum</string>
    <string name="social_media">Social Media</string>
    <string name="UserAnalytics">Analytics</string>
    <string name="profile_">Profile</string>
    <string name="see_blogs">See Blogs</string>
    <string name="blogs">Blogs</string>
    <string name="home">Home</string>
    <string name="title">Title</string>
    <string name="add_blog_content_here">Add blog content here...</string>
    <string name="blog_category">Blog Category</string>
    <string name="data_science">Data Science</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="devops">DevOps</string>
    <string name="cloud">Cloud Computing</string>
    <string name="web_development">Web Development\n</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="general">General</string>
    <string name="blog_image">Blog Image</string>
    <string name="blog_name">Blog Name</string>
    <string name="career_roadmaps_icon">career roadmaps icon</string>
    <string name="career_roadmaps">Career Roadmaps</string>
    <string name="view_career_roadmaps_to_plan_your_career">View career roadmaps to plan your career</string>
    <string name="view_career_paths">View Career Paths</string>
    <string name="got_an_account_sign_in">Got an account? Sign in</string>
    <string name="create_account">Create Account</string>
    <string name="_00_00">00:00</string>
    <string name="blog_content">Blog Content</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="the_career_path_typically_involves">The career path typically involves...</string>
    <string name="what_is_the_career_path_for_this_profession">What is the career path for this profession?</string>
    <string name="career_roadmap_image">career roadmap image</string>
    <string name="ecat_test_picture">Ecat Test Picture</string>
    <string name="ecat">ECAT</string>
    <string name="engineering_college_admission_test">Engineering College Admission Test</string>
    <string name="unlock_your_engineering_dreams_with_our_ecat_preparation">Unlock your engineering dreams with our ECAT preparation!</string>
    <string name="mock_tests">Mock Tests</string>
    <string name="master_the_art_of_testing_with_our_comprehensive_mock_tests">Master the art of testing with our comprehensive mock tests</string>
    <string name="start_practicing">Start Practicing</string>
    <string name="physics">Physics</string>
    <string name="conquer_the_laws_of_nature_with_our_engaging_physics_tests">Conquer the laws of nature with our engaging physics tests!</string>
    <string name="chemistry">Chemistry</string>
    <string name="unleash_the_power_of_elements_with_our_chemistry_tests">Unleash the power of elements with our chemistry tests!</string>
    <string name="maths">Maths</string>
    <string name="crack_the_code_of_numbers_with_our_maths_tests">Crack the code of numbers with our maths tests!</string>
    <string name="english">English</string>
    <string name="master_the_art_of_language_with_our_english_tests">Master the art of language with our English tests!</string>
    <string name="mock_test_results">Mock Test Results</string>
    <string name="retype_password">Retype password</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="roadmap">Roadmap</string>
    <string name="scholastic_assessment_test">Scholastic Assessment Test</string>
    <string name="unleash_your_academic_potential_with_our_sat_preparation">Unleash your academic potential with our SAT preparation</string>
    <string name="math_test_no_calculator">Math Test – No Calculator</string>

</resources>