<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EcatTests"
    android:orientation="vertical"
    android:columnCount="2"
    android:rowCount="2"
    >



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/physicsEcatTestCard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="#153448"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@mipmap/physics"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ecat_test_picture"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physics"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/conquer_the_laws_of_nature_with_our_engaging_physics_tests"
                    android:textColor="#C1C0C0"

                    />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chemistryEcatTestCard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="#153448"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1">



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@mipmap/chemistry"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ecat_test_picture"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemistry"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/unleash_the_power_of_elements_with_our_chemistry_tests"
                    android:textColor="#C1C0C0"

                    />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mathsEcatTestCard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="#153448"
        android:layout_columnWeight="1"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@mipmap/maths"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ecat_test_picture"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maths"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/crack_the_code_of_numbers_with_our_maths_tests"
                    android:textColor="#C1C0C0"

                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/englishEcatTestCard"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="#153448"
        android:layout_columnWeight="1"
        android:layout_column="1"
        android:layout_row="1"
        android:layout_columnSpan="1"
        android:layout_rowSpan="1">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@mipmap/english"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ecat_test_picture"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/master_the_art_of_language_with_our_english_tests"
                    android:textColor="#C1C0C0"

                    />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</GridLayout>