<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MockTests"
    android:orientation="vertical"

    >



    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ecatCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="#153448"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="194dp"
                app:srcCompat="@mipmap/ecat_test_pic"
                android:scaleType="centerCrop"
                android:contentDescription="@string/ecat_test_picture"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/engineering_college_admission_test"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/unlock_your_engineering_dreams_with_our_ecat_preparation"
                    android:textColor="#C1C0C0"

                    />
            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>